[gd_scene format=3 uid="uid://cac3j3wbqgewd"]

[ext_resource type="Script" uid="uid://eabnhq7msque" path="res://characters/enemies/enemy.gd" id="1_qi2p4"]
[ext_resource type="Texture2D" uid="uid://ct7ct26rv5umk" path="res://characters/enemies/sprites/alien_walk_cycle.png" id="2_4gyqm"]
[ext_resource type="AudioStream" uid="uid://b0hppv87ss3mn" path="res://characters/enemies/sounds/ping.wav" id="3_6lc82"]
[ext_resource type="AudioStream" uid="uid://dqnrd3y1twa4i" path="res://characters/enemies/sounds/growl.wav" id="4_008bi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qi2p4"]
atlas = ExtResource("2_4gyqm")
region = Rect2(0, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("2_4gyqm")
region = Rect2(0, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("2_4gyqm")
region = Rect2(43, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("2_4gyqm")
region = Rect2(86, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("2_4gyqm")
region = Rect2(129, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("2_4gyqm")
region = Rect2(172, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("2_4gyqm")
region = Rect2(215, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("2_4gyqm")
region = Rect2(258, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("2_4gyqm")
region = Rect2(301, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("2_4gyqm")
region = Rect2(344, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("2_4gyqm")
region = Rect2(387, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("2_4gyqm")
region = Rect2(430, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("2_4gyqm")
region = Rect2(473, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("2_4gyqm")
region = Rect2(516, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmwgi"]
atlas = ExtResource("2_4gyqm")
region = Rect2(559, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2u8i"]
atlas = ExtResource("2_4gyqm")
region = Rect2(602, 0, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_otto8"]
atlas = ExtResource("2_4gyqm")
region = Rect2(645, 0, 42, 58)

[sub_resource type="SpriteFrames" id="SpriteFrames_iifgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi2p4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2u8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otto8")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_jfoax"]
cull_mode = 1
polygon = PackedVector2Array(0, -24, 2, -25, 6, -26, 9, -25, 11, -24, 13, -23, 14, -22, 15, -20, 16, -18, 17, -16, 18, -13, 19, -10, 20, -7, 18, -1, 17, 4, 16, 7, 15, 11, 15, 16, 16, 19, 17, 21, 16, 23, 15, 25, 14, 26, 11, 26, 11, 25, 13, 25, 14, 24, 14, 21, 13, 20, 11, 20, 10, 21, 10, 22, 9, 22, 9, 19, 11, 18, 12, 17, 12, 11, 13, 4, 14, -1, 14, -5, 5, -5, 4, -3, 3, -1, 2, 1, 1, 2, 0, 3, -1, 3, -2, 2, -3, 1, -4, -1, -5, -3, -6, -5, -14, -5, -14, 3, -13, 10, -12, 17, -11, 18, -10, 19, -9, 20, -9, 22, -10, 22, -10, 21, -11, 20, -13, 20, -14, 21, -14, 24, -13, 25, -11, 25, -11, 26, -15, 26, -16, 25, -17, 23, -17, 19, -15, 16, -15, 11, -16, 7, -17, 3, -18, -1, -19, -5, -20, -7, -19, -10, -18, -13, -17, -16, -16, -18, -15, -20, -14, -22, -13, -23, -11, -24, -9, -25, -7, -26, -2, -25)

[node name="Enemy" type="CharacterBody2D" unique_id=406099680]
z_index = 2
collision_layer = 4
collision_mask = 7
script = ExtResource("1_qi2p4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1100735631]
sprite_frames = SubResource("SpriteFrames_iifgy")
animation = &"walk"
frame_progress = 0.57312816

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." unique_id=1338391161]
polygon = PackedVector2Array(0, -25, 6, -27, 12, -24, 18, -16, 21, -7, 16, 10, 16, 16, 18, 23, 15, 26, 11, 26, 11, 24, 8, 23, 8, 19, 11, 16, 13, 0, 13, -5, 6, -4, 0, 4, -7, -5, -13, -5, -12, 10, -11, 17, -8, 20, -8, 23, -10, 26, -15, 27, -18, 21, -16, 13, -21, -8, -16, -21, -8, -27)

[node name="LightOccluder2D" type="LightOccluder2D" parent="." unique_id=1304358147]
occluder = SubResource("OccluderPolygon2D_jfoax")
occluder_light_mask = 2

[node name="Ping" type="AudioStreamPlayer2D" parent="." unique_id=2009140618]
stream = ExtResource("3_6lc82")
max_distance = 400.0
bus = &"Ping"

[node name="PingTimer" type="Timer" parent="." unique_id=491617435]

[node name="Growl" type="AudioStreamPlayer2D" parent="." unique_id=1572419313]
stream = ExtResource("4_008bi")
max_distance = 600.0

[node name="GrowlTimer" type="Timer" parent="." unique_id=1763530637]
wait_time = 20.0
autostart = true

[connection signal="timeout" from="PingTimer" to="." method="_on_ping_timer_timeout"]
[connection signal="timeout" from="GrowlTimer" to="." method="_on_growl_timer_timeout"]
